--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.9",
     "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
+    "mui-color-input": "^2.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
