--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
     "mui-color-input": "^2.0.3",
+    "mui-file-input": "^4.0.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
