--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "mui-file-input": "^4.0.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.33.0",
     "react-lightbox-component": "^1.2.1",
     "react-photo-album": "^2.0.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
