--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mui-color-input": "^2.0.3",
     "mui-file-input": "^4.0.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.4",
     "react-chartjs-2": "^5.1.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.33.0",
