--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dayjs": "^1.11.9",
     "gapi-script": "^1.2.0",
     "html-react-parser": "^5.1.10",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "moment": "^2.29.4",
     "mui-color-input": "^2.0.3",
     "mui-file-input": "^4.0.4",
