--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
+    "@mui/icons-material": "^7.0.0",
+    "@mui/material": "^7.0.0",
+    "@mui/system": "^7.0.0",
+    "@mui/x-date-pickers": "^8.1.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -23,11 +23,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "moment": "^2.29.4",
-    "mui-color-input": "^2.0.3",
-    "mui-file-input": "^4.0.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.13.4",
     "react-chartjs-2": "^5.1.0",
+    "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.33.0",
     "react-lightbox-component": "^1.2.1",
